--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -11,6 +11,7 @@
   <div class="bordered switch">
     <mbsc-switch #sendMailToNotifierControl 
                  [disabled]="isSendMailToNotifierDisabled"
+                 [(ngModel)]="isSendMailToNotifierChecked"
                  [formControlName]="caseFieldsNames.Log_SendMailToNotifier"
                  (change)="onSendExternalEmailsCheckChanged()"
                  [options]="switchOptions">
@@ -44,6 +45,7 @@
   <div class="bordered switch">
     <mbsc-switch #sendMailToPerformerControl 
                 [disabled]="isPerformerNullOrCurrentUser"
+                [(ngModel)]="isSendMailToPerformerChecked"
                  [formControlName]="caseFieldsNames.Log_SendMailToPerformer"
                  (change)="onSendInternalEmailsCheckChanged()"
                  [options]="switchOptions">
