--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
@@ -24,7 +24,7 @@
                             @Translation.GetCoreTextTranslation("Kund")<span class="mandatorystar"> * </span>
                         </td>
                         <td class="span9">
-                            @Html.DropDownListFor(m => m.SelectedCustomerId, Model.Customers, string.Empty, new {id = "customerSelect", @class= "chosen-single-select" })
+                            @Html.DropDownListFor(m => m.SelectedCustomerId, Model.Customers, string.Empty, new { id = "customerSelect", @class = "chosen-single-select" })
                         </td>
                     </tr>
                     <tr>
@@ -32,7 +32,7 @@
                             @Translation.GetCoreTextTranslation("Bevarandeperiod")
                         </td>
                         <td class="span9">
-                            @Html.TextBoxFor(m => m.RetentionPeriod, new { id = "retentionPeriod", maxlength="4", @class="inputw50" })
+                            @Html.TextBoxFor(m => m.RetentionPeriod, new { id = "retentionPeriod", maxlength = "4", @class = "inputw50" })
                             @Translation.GetCoreTextTranslation("dagar")
                             <div id="retentionDaysError"></div>
                         </td>
@@ -49,8 +49,8 @@
                             @Translation.GetCoreTextTranslation("Registreringsdatum")<span class="mandatorystar"> * </span>
                         </td>
                         <td class="span9">
-                            @Html.EditorFor(m => m.RegisterDateFrom, "DatePicker", new {id = "regCaseFrom", type = "text" })
-                            @Html.EditorFor(m => m.RegisterDateTo, "DatePicker", new {id = "regCaseTo", type = "text" })
+                            @Html.EditorFor(m => m.RegisterDateFrom, "DatePicker", new { id = "regCaseFrom", type = "text" })
+                            @Html.EditorFor(m => m.RegisterDateTo, "DatePicker", new { id = "regCaseTo", type = "text" })
                             <div id="datesErrorLabel"></div>
                         </td>
                     </tr>
@@ -81,6 +81,23 @@
                     </tr>
                     <tr>
                         <td class="span3">
+                            @Translation.GetCoreTextTranslation("Ärendetyp")<span class="mandatorystar"> * </span>
+                        </td>
+                        <td class="span9">
+                            @Html.DropDownListFor(m => m.CaseTypeNames, Model.CaseTypes,
+                                new
+                                {
+                                    id = "lstFilterCaseTypes",
+                                    multiple = "multiple",
+                                    @class = "chosen-select",
+                                    placeholder = Translation.GetCoreTextTranslation("Välj en eller flera"),
+                                    style = "width: 300px"
+                                })
+                            <i id="fieldsLoader" class="gif-loader" style="display:none">&nbsp;</i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="span3">
                         </td>
                         <td class="span9">
                             @Html.CheckBoxFor(m => m.ReplaceEmails) @Translation.GetCoreTextTranslation("Ta bort e-mail adresser i ärendelogg och historik")
@@ -99,7 +116,7 @@
                             @Translation.GetCoreTextTranslation("Ersätt datum med")
                         </td>
                         <td class="span9">
-                            @Html.EditorFor(m => m.ReplaceDatesWith, "DatePicker", new {id = "replacedDate"})
+                            @Html.EditorFor(m => m.ReplaceDatesWith, "DatePicker", new { id = "replacedDate" })
                         </td>
                     </tr>
                     <tr>
