--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
@@ -24,8 +24,7 @@
                             @Translation.GetCoreTextTranslation("Typ")<span class="mandatorystar"> * </span>
                         </td>
                         <td class="span9">
-                            @Html.DropDownListFor(m => m.SelectedGDPRType, Model.GDPRType,
-                                    @Translation.GetCoreTextTranslation("Välj") + " " + @Translation.GetCoreTextTranslation("typ"), new { id = "gdprTypeSelect", @class = "chosen-single-select" })
+                            @Html.DropDownListFor(m => m.SelectedGDPRType, Model.GDPRType, string.Empty, new { id = "gdprTypeSelect", @class = "chosen-single-select" })
                         </td>
                     </tr>
                     <tr>
